--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "bootstrap": "^5.3.0-alpha1",
+    "i": "^0.3.7",
+    "npm": "^9.4.0",
     "sass": "^1.57.1",
     "vue": "^3.2.45"
   },
